boulder/boulder/tests/compile_fail/hir/uninitialized.bo
# uninitialized
# `a`

fn test() -> u32 {
    let a: u32;
    a + 1
}